# hyrdaflow

./: .dockerignore  .env.sample  .gitignore  .hydraflow-audit-baseline  .lgtm.yml  AGENTS.md  CLAUDE.md  Dockerfile.agent  Dockerfile.agent-base  Dockerfile.playwright  HITL_RESOLUTION_LOG.md  LICENSE  Makefile  README.md  acceptance_criteria.py  agent.py  agent_cli.py  ahlbipfhsqkonovec77ctrtddagbrfmm.darc  analysis.py  base_runner.py  ci_scaffold.py  claude.sh  cli.py  config.py  conflict_prompt.py  context_cache.py  dashboard.py  dashboard_routes.py  docker-compose.sandbox.yml  docker-compose.yml  docker_runner.py  epic.py  escalation_gate.py  events.py  execution.py  file_util.py  harness_insights.py  hitl_phase.py  hitl_runner.py  implement_phase.py  (+51 more)
.beads/: metadata.json
.beads/hooks/: pre-commit  pre-push
.claude/: settings.json
.claude/agents/: hydraflow-review-advisor.md
.claude/commands/: audit-integration-tests.md  audit-tests.md  gh-issue.md  gh-memory.md  hf.adr.md  hf.audit-architecture.md  hf.audit-code.md  hf.audit-hooks.md  hf.audit-integration-tests.md  hf.audit-tests.md  hf.diff-sanity.md  hf.issue.md  hf.memory.md  hf.quality-gate.md  hf.test-adequacy.md
.claude/hooks/: README.md  hf.auto-lint-after-edit.sh  hf.block-destructive-git.sh  hf.check-cross-service-impact.sh  hf.check-test-counterpart.sh  hf.enforce-migrations.sh  hf.gate-stop-agents.sh  hf.mirror-feedback-memory.sh  hf.session-retro.sh  hf.validate-tests-before-commit.sh  hf.warn-new-file-creation.sh  validate-tests-before-commit.sh
.claude/plans/: 371.md  issue-140.md  issue-147.md  issue-485.md
.githooks/: pre-commit  pre-push
.github/workflows/: adr-touchpoints.yml  arch-regen.yml  build-agent-base-image.yml  build-agent-image.yml  ci.yml  codeql.yml  pages-deploy.yml  quality.yml  rc-promotion-scenario.yml
.hydraflow/: arch_rules.py
.pi/skills/: hf-adr.md  hf-diff-sanity.md  hf-issue.md  hf-test-adequacy.md
deploy/ec2/: deploy-hydraflow.sh
docs/: about.md  index.md  ops-audit-issues.md  ops-audit-plan.md  prompt-audit-2026-04-20.md  rpi-adoption-plan.md  sentry-alerts.md
docs/adr/: 0001-five-concurrent-async-loops.md  0002-labels-as-state-machine.md  0003-git-worktrees-for-isolation.md  0004-agent-cli-as-runtime.md  0005-pr-recovery-and-zero-diff-branch-handling.md  0006-repo-runtime-isolation.md  0007-dashboard-api-multi-repo-scoping.md  0008-multi-repo-dashboard-architecture.md  0009-auto-decompose-triage-counter-exclusion.md  0009-multi-repo-process-per-repo-model.md  0009-screenshot-capture-pipeline.md  0010-worktree-and-path-isolation.md  0011-epic-release-creation-architecture.md  0012-epic-merge-coordination-architecture.md  0013-screenshot-capture-pipeline.md  0014-session-counter-forward-progression-semantics.md  0015-protocol-callback-gate-pattern.md  0016-visual-validation-skipped-override-semantics.md  0017-auto-decompose-triage-counter-exclusion.md  0018-screenshot-capture-pipeline.md  0019-background-task-delegation-abstraction-layer.md  0020-autoApproveRow-border-context-awareness.md  0021-persistence-architecture-and-data-layout.md  0022-crate-manager-gating-and-issue-store-snapshot-alignment.md  0022-integration-test-architecture-cross-phase.md  (+75 more)
docs/agents/: README.md  (+9 more)
hf_cli/: config.py  init_cmd.py  supervisor_service.py
repo_wiki/: README.md
scripts/: audit_prompts.py  bundle_assets.py  call_api.py  check_adr_touchpoints.py  check_layer_imports.py  cleanup_phantom_cost.py  cost_report.py  docker-smoke-test.sh  embed_assets.py  extract_hindsight_to_wiki.py  lint_ubiquitous_language.py  merge_assets.py  migrate-memory-to-hindsight.py  migrate-state-to-dolt.py  migrate_entries_to_term_evidence.py  migrate_wiki_to_git.py  mirror_feedback_memory.py  run_admin_task.py  run_term_proposer_once.py  sandbox_scenario.py  scaffold_loop.py  seed_terms.py  setup_branch_protection.py  setup_staging_branch.py  strip_test_sludge.py  sync_implement_state.py  test-hindsight-integration.sh  trace_canary_prompts.py  wiki_backfill_compile.py  wiki_content_cleanup.py  wiki_schema_slim_migration.py
src/: __init__.py  _mock_spec_detector.py  acceptance_criteria.py  activity_parser.py  admin_tasks.py  adr_draft_opener.py  adr_drift.py  adr_index.py  adr_pre_validator.py  adr_reviewer.py  adr_reviewer_loop.py  adr_touchpoint_auditor_loop.py  adr_utils.py  adversarial_agent_runner.py  adversarial_agents.py  adversarial_labels.py  adversarial_retry_loop.py  agent.py  agent_cli.py  analysis.py  app_version.py  assumption_surfacer.py  auto_agent_preflight_loop.py  auto_pr.py  base_background_loop.py  base_runner.py  baseline_policy.py  beads_manager.py  bg_worker_manager.py  bot_pr_loop.py  bug_reproducer.py  changelog.py  ci_monitor_loop.py  ci_scaffold.py  circuit_breaker.py  cli.py  code_grooming_loop.py  comment_formatter.py  complexity_gate.py  confidence_calibration.py  (+220 more)
static/: dashboard.js
templates/: index.html
tests/: _mock_spec_grandfathered.yaml  conftest.py  dora_scenarios.py  helpers.py  orchestrator_integration_utils.py  test_acceptance_criteria.py  test_active_issue_ownership.py  test_active_lint_tracked.py  test_activity_parser.py  test_activity_parser_gemini.py  test_admin_tasks.py  test_adr_0009.py  test_adr_0009_multi_repo.py  test_adr_0010.py  test_adr_0012.py  test_adr_0015_gate_table_consistency.py  test_adr_0015_protocol_callback_gate.py  test_adr_0016_visual_validation_skip_semantics.py  test_adr_0019.py  test_adr_0020.py  test_adr_0023_duplicate_removal.py  test_adr_0023_duplicate_resolution.py  test_adr_0024_cli_argparse_config_builder.py  test_adr_draft_workflow.py  test_adr_drift.py  test_adr_enforcement.py  test_adr_gate_relevance.py  test_adr_index.py  test_adr_pre_validator.py  test_adr_reviewer.py  test_adr_reviewer_enforced_by.py  test_adr_reviewer_loop.py  test_adr_session_counter_semantics.py  test_adr_source_references.py  test_adr_structure.py  test_adr_touchpoint_auditor_loop.py  test_adr_touchpoints.py  test_adr_utils.py  test_adversarial_agent_runner.py  test_adversarial_events.py  (+553 more)
ui/: index.html  package-lock.json  package.json
(+1353 files in other folders)
