[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["ui*", "templates*", "tests*"]

[project]
name = "hydraflow"
version = "0.9.2"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pydantic>=2.0.0",
    "docker>=7.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0",
    "python-ulid>=3.0.0",
    "sentry-sdk[fastapi]>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.6",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-exporter-otlp-proto-http>=1.30.0",
    "opentelemetry-instrumentation-asyncio>=0.51b0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "opentelemetry-instrumentation-httpx>=0.51b0",
    "opentelemetry-instrumentation-logging>=0.51b0",
    "opentelemetry-sdk>=1.30.0",
]

[project.scripts]
hydraflow = "server:main"

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "pytest-playwright>=0.5.0",
    "pytest-rerunfailures>=16.0",
    "httpx>=0.27.0",
    "hypothesis>=6.100.0",
]
dev = [
    "ruff==0.15.0",
    "pyright==1.1.408",
    "bandit[toml]==1.8.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "mkdocs-git-revision-date-localized-plugin>=1.2.4",
]
# Explicit docker extra so `hydraflow[docker]` remains TOML-installable.
docker = [
    "docker>=7.0.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "pyfakefs>=5.7.0",
]

# === Ruff ===
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]
exclude = [
    ".venv", "venv", "build", "dist", "node_modules",
    "htmlcov", "__pycache__", ".pytest_cache", ".ruff_cache",
    ".claude/worktrees", ".codex/worktrees",
    ".hydraflow",
    "repo_wiki",
    "tests/regressions",
    # Adversarial corpus fixtures contain intentional bugs (missing imports,
    # stale callsites, leftover debug prints) that each skill is expected to
    # flag. Linting them would defeat the point — the harness, not ruff, is
    # what should catch these.
    "tests/trust/adversarial/cases",
    "scripts/cost_report.py",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "PL", "SIM"]
ignore = ["E501", "B008", "C901", "PLR0913", "PLR0912", "PLR0915", "PLR2004", "PLC0415"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "B011", "F811", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["."]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# === Pyright ===
[tool.pyright]
pythonVersion = "3.11"
# extraPaths puts `src/` on pyright's module search path so imports like
# `from repo_wiki import RepoWikiStore` resolve to `src/repo_wiki.py` and
# are not shadowed by the tracked `repo_wiki/` data directory at the root.
extraPaths = ["src"]
include = ["src", "."]
exclude = [
    "tests",
    "**/__pycache__",
    "**/node_modules",
    "templates",
    ".cache",
    ".cache/**",
    ".uv-cache",
    ".uv-cache/**",
    ".venv",
    "venv",
    "**/venv",
    ".claude/worktrees",
    ".claude/worktrees/**",
    ".codex/worktrees",
    ".codex/worktrees/**",
    ".hydraflow",
    ".hydraflow/**",
    # Tracked wiki data (markdown + YAML frontmatter). Not importable code —
    # the `repo_wiki` Python module lives at src/repo_wiki.py and must not
    # be shadowed by this directory.
    "repo_wiki",
    "repo_wiki/**",
]
typeCheckingMode = "standard"
reportMissingImports = false
reportMissingTypeStubs = false

# === Bandit ===
[tool.bandit]
exclude_dirs = [
    "tests",
    "venv",
    ".venv",
    ".cache",
    ".cache/uv",
    ".uv-cache",
    ".claude/worktrees",
    ".codex/worktrees",
]
skips = ["B101"]

# === Pytest ===
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-q",
    "--tb=short",
    "-m", "not soak and not docker and not scenario_loops and not scenario_browser",
]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "soak: marks tests as soak/long-running tests (excluded from default runs)",
    "docker: marks tests requiring a running Docker daemon",
    "scenario: scenario tests with MockWorld (full pipeline, deterministic)",
    "scenario_loops: scenario tests exercising background loops (Tier B)",
    "scenario_browser: scenario tests driving the real dashboard via Playwright (Tier C)",
]
# ADR-0044 P5.7: async lifecycle bugs manifest as RuntimeWarning.
# Treat them as errors so CI fails red instead of silently accumulating
# drift. The AsyncMock-plumbing exemption below tolerates coroutines from
# `unittest.mock.AsyncMockMixin._execute_mock_call` that leak when a bare
# `AsyncMock()` stands in for a port with sync methods — a test-fixture
# smell, not a production async bug. Fix those at the mock-creation site
# (use `spec=<Protocol>` or override sync methods explicitly) to tighten
# the bar further.
filterwarnings = [
    "error::RuntimeWarning",
    "default:coroutine 'AsyncMock.*' was never awaited:RuntimeWarning",
    "default::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__init__.py", "venv/*", ".venv/*", "templates/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
